<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.testing</groupId>
    <artifactId>pax-exam-service-test-sample</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>pax-service-test</module>
        <module>pax-exam-service-test-program</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <version.pax-exam>4.5.0</version.pax-exam>
		<junit.version>4.11</junit.version>
		<testng.version>6.8.17</testng.version>
		<surefire.version>2.18.1</surefire.version>
		<skipTests>false</skipTests>
                <apache-karaf.version>4.0.3</apache-karaf.version>
                <geronimo.jta-spec.version>1.1.1</geronimo.jta-spec.version>
                <geronimo.atinject-spec.version>1.0</geronimo.atinject-spec.version>
		<maven.compiler.maxmem>256M</maven.compiler.maxmem>
		<maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.fork>false</maven.compiler.fork>
		<maven.compiler.useIncrementalCompilation>false</maven.compiler.useIncrementalCompilation>
    </properties>
    
    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                    <configuration>
                        <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
                        <!--
                        <argLine>${surefireArgLine} -XX:MaxPermSize=256m</argLine>
                        <skip>${skipTests}</skip>
                        <properties>
                            <property>
                                <name>usedefaultlisteners</name>
                                <value>false</value>
                            </property>
                            <property>
                                <name>listener</name>
                                <value>${testng.listeners}</value>
                            </property>
                        </properties>
                        -->
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.servicemix.tooling</groupId>
                <artifactId>depends-maven-plugin</artifactId>
                <version>1.2</version>
                <executions>
                    <execution>
                        <id>generate-depends-file</id>
                        <goals>
                            <goal>generate-depends-file</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>            
    
	<dependencyManagement>
		<dependencies>
	        <!--
			<dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-container-native</artifactId>
				<version>${version.pax-exam}</version>
				<scope>test</scope>
			</dependency>
	        -->
	        <dependency>
	            <groupId>org.ops4j.pax.exam</groupId>
	            <artifactId>pax-exam-container-karaf</artifactId>
				<version>${version.pax-exam}</version>
	        </dependency>
	        
			<dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-inject</artifactId>
				<version>${version.pax-exam}</version>
			</dependency>

			<dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-features</artifactId>
				<version>${version.pax-exam}</version>
				<type>xml</type>
<!-- 				<classifier>features</classifier> -->
			</dependency>
	
			<dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-extender-service</artifactId>
				<version>${version.pax-exam}</version>
			</dependency>
	
			<!-- Preferred link because it does not require an mvn url handler implicitely. -->
			<dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-link-mvn</artifactId>
				<version>${version.pax-exam}</version>
			</dependency>
	        
			<dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-link-assembly</artifactId>
				<version>${version.pax-exam}</version>
			</dependency>
	        
	        <!-- framework to test with -->
			<dependency>
				<groupId>org.apache.karaf.features</groupId>
				<artifactId>standard</artifactId>
				<version>${apache-karaf.version}</version>
				<type>xml</type>
				<classifier>features</classifier>
<!-- 				<scope>test</scope> -->
			</dependency>
	
			<dependency>
				<groupId>org.apache.karaf.features</groupId>
				<artifactId>org.apache.karaf.features.core</artifactId>
				<version>${apache-karaf.version}</version>
<!-- 				<scope>test</scope> -->
			</dependency>
	
			<dependency>
				<groupId>org.apache.karaf.system</groupId>
				<artifactId>org.apache.karaf.system.core</artifactId>
				<version>${apache-karaf.version}</version>
			</dependency>
			
			<!-- 
			<dependency>
				<groupId>org.apache.karaf</groupId>
				<artifactId>apache-karaf</artifactId>
				<version>${apache-karaf.version}</version>
				<type>zip</type>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>org.apache.karaf.shell</groupId>
						<artifactId>org.apache.karaf.shell.dev</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			-->
	        <dependency>
	            <groupId>org.apache.karaf</groupId>
	            <artifactId>apache-karaf</artifactId>
	            <type>zip</type>
	            <version>${apache-karaf.version}</version>
	            <exclusions>
	                <exclusion>
	                    <groupId>org.apache.karaf</groupId>
	                    <artifactId>org.apache.karaf.client</artifactId>
	                </exclusion>
	            </exclusions>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.karaf</groupId>
	            <artifactId>apache-karaf</artifactId>
	            <version>${apache-karaf.version}</version>
	            <type>tar.gz</type>
	            <exclusions>
	                <exclusion>
	                    <groupId>org.apache.karaf</groupId>
	                    <artifactId>org.apache.karaf.client</artifactId>
	                </exclusion>
	            </exclusions>
	        </dependency>
	        
	        <!-- -->
	        <dependency>
	            <groupId>org.apache.geronimo.specs</groupId>
	            <artifactId>geronimo-atinject_1.0_spec</artifactId>
	            <version>${geronimo.atinject-spec.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.geronimo.specs</groupId>
	            <artifactId>geronimo-jta_1.1_spec</artifactId>
	            <version>${geronimo.jta-spec.version}</version>
	        </dependency>
	        
			<!-- For sane logging -->
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<scope>test</scope>
				<version>1.1.2</version>
			</dependency>
	        
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<scope>test</scope>
				<version>1.1.2</version>
			</dependency>
	
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jul-to-slf4j</artifactId>
				<scope>test</scope>
				<version>1.7.7</version>
			</dependency>
	
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<scope>test</scope>
				<version>1.7.7</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
